# openai_practice-assginments-for-preparation

simple_chatbot/: .gitignore  pyproject.toml
simple_chatbot/all_assignments/: assignment1.py  assignment2.py  assignment3.py  assignment4.py  assignment5.py
simple_chatbot/model_config/: model_setting.py
